--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-container",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "simple mobx container for react component",
   "main": "lib/index.js",
   "jsnext:main": "es/index.js",
@@ -39,6 +39,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
