--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mobx-container",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "simple mobx container for react component",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "jsnext:main": "es/index.js",
   "files": [
     "dist",
